<resources>
    <string name="app_name">Project 03 Crypto/Nft API</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="favorite">Favorites</string>

    <!--    login activity strings-->
    <string name="login_form_entry_error">Please enter a value for both fields</string>
    <string name="header_text">Please enter your username and password below to login:</string>
    <string name="username_label">Enter your username:</string>
    <string name="password_label">Enter your password:</string>
    <string name="submit_button_text">Submit</string>

    <!--    welcome activity strings-->
    <string name="welcome_message">Welcome to our Crypto/Nft Tracking App %s!</string>
    <string name="back_button_text">Back</string>
    <string name="continue_button_text">Continue</string>
    <string name="login_error">Please enter a username and password</string>

    <!--    register activity strings-->
    <string name="register_form_entry_error">Please enter a value for all fields</string>
    <string name="register_header_text">Please enter your information below to register:</string>
    <string name="first_name_label">Enter your first name:</string>
    <string name="last_name_label">Enter your last name:</string>
    <string name="user_name_label">Enter your username:</string>
    <string name="email_label">Enter your email:</string>
    <string name="phone_label">Enter your phone number:</string>
    <string name="register_button_text">Register</string>
    <string name="register_success">Registration successful!</string>

    <!--    mobile_navigation.xml strings-->
    <string name="menu">Menu</string>
    <string name="coin">Coin</string>
    <string name="nft">NFT</string>

    <string name="settings">Settings</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="bank_finder">Bank Finder</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_fragment">Settings for %s</string>

    <string name="crypto_Favorites">        %s Crypto Favorites        </string>
    <string name="nft_Favorites">        %s NFT Favorites        </string>

    <string name="photo_verify">Photo Verify</string>
    <string name="logout">Logout</string>
</resources>